styles/Styles.css
html {
    height: 100%;
    width: 100%;
}
/* Lining up the navagation links */
ul {
display: flex;
flex-direction: row;
justify-content: center;
}

.btn {

    color: #0099CC;
    background: transparent;
    border: 2px solid #0099CC;
    border-radius: 6px;
   /* border: none;*/
      color: white;
      padding: 16px 32px;
      text-align: center;
      display: inline-block;
      font-size: 16px;
      margin: 4px 2px;
      -webkit-transition-duration: 0.4s;
      /* Safari */
      transition-duration: 0.4s;
      cursor: pointer;
      text-decoration: none;
      text-transform: uppercase;
}
a {
    text-decoration: none;
    color:aqua
}

/* Added Background Image to Landing Page */
body {
  background-image: url(background-Image.jpg);
  background-repeat: no-repeat;
  background-position: center;
  background-attachment: fixed;
  background-size: cover;

  position:absolute;
  top:0; bottom:0; right:0; left:0;
}

header {
    width: 100%;
    height: 20%;
    background-color: rgba(200, 0, 0, 0.5); /*Temporary (helps determine size/location)*/
    text-align: center;
}

.PageLinks {
    width: 100%;
    height: 5%;
    background-color: rgba(200, 200, 0, 0.5); /*Temporary (helps determine size/location)*/
    text-align: center;
}



/*Body*/
.CenterPage {
    /*  */
    width: 75%;
    height: 80%;
    background-color: rgba(0, 200, 0, 0.5); /*Temporary (helps determine size/location)*/
    text-align: center;
    margin: auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
}
.card_Row {
    display: flex;
    flex-direction: row;
    justify-content: center;

    width: 95%;
    height: 95%;

    margin: auto;
}
.card_Column {
    display: flex;
    flex-direction: column;
    justify-content: center;

    width: 30%;
    height: 100%;

    margin: auto;
}
.card_plain {
    width: 100%;
    height: 30%;
    background-color: rgba(0, 200, 200, 0.5); /*Temporary (helps determine size/location)*/

    border: 2px solid blue;
    border-radius: 10px;
    border-style: dotted dotted inset dotted;

    margin: auto;
}
.card_plain img {
    width: 100%;
    height: 50%;
    border-radius: 10px 10px 0 0;
}
.card_plain h1 {
    color: white;
    font-size: 10px;
    /* font-weight: bold; */
}
.card_plain p {
    font-style: italic;
    font-size: 7.5px;
}
.card_plain a {
    font-size: 5px;
    color: blue;
}

footer {
    width: 75%;
    height: 20%;
    background-color: rgba(0, 0, 200, 0.5); /*Temporary (helps determine size/location)*/
    text-align: center;
    margin: auto;
}

